[CR] fixed CR-1120089

--- a/L2/louvainmod_opt_kernel/Makefile
+++ b/L2/louvainmod_opt_kernel/Makefile
@@ -125,13 +125,13 @@ CXXFLAGS += -D HW_EMU_TEST
 endif
 
 # ######################### Host compiler global settings ############################
-CXXFLAGS += -I$(XILINX_XRT)/include -I$(XILINX_VIVADO)/include -std=c++11 -O3 -Wall -Wno-unknown-pragmas
+CXXFLAGS += -I$(XILINX_XRT)/include -I$(XILINX_VITIS)/include -std=c++11 -O3 -Wall -Wno-unknown-pragmas
 LDFLAGS += -L$(XILINX_XRT)/lib -lOpenCL -lpthread -lrt -Wno-unused-label -Wno-unused-variable -Wno-write-strings -Wno-narrowing -DVERBOSE -Wno-format
 CXXFLAGS += -fmessage-length=0 -O3 -DPRAGMA -Ofast -fopenmp -fPIC -DMULTITHREAD
 CXXFLAGS += -I$(CUR_DIR)/src/ 
 
 ifeq ($(HOST_ARCH), x86)
-LDFLAGS += -L$(XILINX_VIVADO)/lnx64/tools/fpo_v7_0 -Wl,--as-needed -lgmp 
+LDFLAGS += -L$(XILINX_VITIS)/lnx64/tools/fpo_v7_0 -Wl,--as-needed -lgmp 
 #-lmpfr -lIp_floating_point_v7_0_bitacc_cmodel
 endif
 ifneq (,$(shell echo $(XPLATFORM) | awk '/u50/'))
