--- a/L2/louvainmod_pruning_kernel/Makefile
+++ b/L2/louvainmod_pruning_kernel/Makefile
@@ -129,7 +129,7 @@ CXXFLAGS += -D HW_EMU_TEST
 endif
 
 # ######################### Host compiler global settings ############################
-CXXFLAGS += -I$(XILINX_XRT)/include -I$(XILINX_VIVADO)/include -std=c++11 -Wall -Wno-unknown-pragmas
+CXXFLAGS += -I$(XILINX_XRT)/include -I$(XILINX_VITIS)/include -std=c++11 -Wall -Wno-unknown-pragmas
 LDFLAGS += -L$(XILINX_XRT)/lib -lOpenCL -lpthread -lrt -Wno-unused-label -Wno-unused-variable -Wno-write-strings -Wno-narrowing -DVERBOSE -Wno-format
 CXXFLAGS += -fmessage-length=0 -DPRAGMA -fopenmp -fPIC -DMULTITHREAD
 CXXFLAGS += -O3 -Ofast
@@ -138,7 +138,7 @@ CXXFLAGS += -O3 -Ofast
 CXXFLAGS += -I$(CUR_DIR)/src/ 
 
 ifeq ($(HOST_ARCH), x86)
-LDFLAGS += -L$(XILINX_VIVADO)/lnx64/tools/fpo_v7_0 -Wl,--as-needed -lgmp
+LDFLAGS += -L$(XILINX_VITIS)/lnx64/tools/fpo_v7_0 -Wl,--as-needed -lgmp
 #-lmpfr -lIp_floating_point_v7_0_bitacc_cmodel
 endif
 ifneq (,$(shell echo $(XPLATFORM) | awk '/u50/'))
@@ -208,7 +208,7 @@ $(BUILD_DIR)/kernel_louvain.xclbin: $(BINARY_CONTAINER_kernel_louvain_OBJS)
 
 # Add kernel alias to xclbin post-build so that the same kernel targeting different devices can be differentiated.
 	rm -f $(BUILD_DIR)/kernel_louvain_pruning_alias.xclbin
-	$(XILINX_VIVADO)/bin/xclbinutil -i $(BUILD_DIR)/kernel_louvain.xclbin \
+	$(XILINX_VITIS)/bin/xclbinutil -i $(BUILD_DIR)/kernel_louvain.xclbin \
 								   --key-value=USER:kernel_louvain:'{"alias": "kernel_louvain_pruning_u50"}' \
 	                               -o $(BUILD_DIR)/kernel_louvain_pruning_alias.xclbin
 
