Added entity resolution jupyter notebook example

--- a/plugin/tigergraph/fuzzymatch/Makefile
+++ b/plugin/tigergraph/fuzzymatch/Makefile
@@ -54,7 +54,8 @@ STAGE_COPY_FILES = \
     $(ENTRESOLUTION_DIR)/bin/set-plugin-vars.sh \
     $(ENTRESOLUTION_DIR)/udf/entityResolution.hpp \
     $(ENTRESOLUTION_DIR)/udf/entityResolutionImpl.hpp \
-	$(ENTRESOLUTION_DIR)/query/base.gsql \
+    $(ENTRESOLUTION_DIR)/jupyter-demo/TG_demo.ipynb \
+    $(ENTRESOLUTION_DIR)/query/base.gsql \
     $(ENTRESOLUTION_DIR)/query/load.gsql \
     $(ENTRESOLUTION_DIR)/query/entity_resolution.gsql \
     $(ENTRESOLUTION_DIR)/query/schema.gsql \
