--- a/plugin/tigergraph/fuzzymatch/package/CMakeLists.txt
+++ b/plugin/tigergraph/fuzzymatch/package/CMakeLists.txt
@@ -73,6 +73,7 @@ endif()
 set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${CPACK_REL_VER}-${CPACK_ARCH}")
 
 message("-- ${CMAKE_BUILD_TYPE} ${PACKAGE_KIND} package")
+set(CPACK_RPM_SPEC_MORE_DEFINE "%define __python python3")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "xrt (>= 2.8.0),xrm (>= 1.2.0),python3")
 set(CPACK_RPM_PACKAGE_DEPENDS "xrt (>= 2.8.0), xrm (>= 1.2.0),python3 (>= 3.6.0)")
 
