MIS TigerGraph Improvements
* Fixed CSR generation bug that allowed correct runs only the first time
* Added TG Notebook in packaging list
* Made Xilinx MIS queries signature same as TG
* Updated UDFs to return actual MIS set and not just the count
* Updated Xilinx MIS query to return TG vetices in MIS results
* Updated run script for correct execution
* Updated load gsql file to get rid of warning
* Updated TG Notebook, significantly improving the quality

--- a/plugin/tigergraph/mis/Makefile
+++ b/plugin/tigergraph/mis/Makefile
@@ -51,6 +51,7 @@ STAGE_COPY_FILES = \
 	$(EXAMPLE_DIR)/query/xlnx_maximal_indep_set.gsql \
     \
     $(EXAMPLE_DIR)/bin/run.sh \
+    $(EXAMPLE_DIR)/jupyter/travelplan-jupyter-tg.ipynb \
 
 # Example directories into which to copy example common files
 STAGE_EXAMPLES_DIRS = $(EXAMPLE_DIR)
