update kernel limits

--- a/mis/Makefile
+++ b/mis/Makefile
@@ -46,6 +46,7 @@ CXXFLAGS = -std=c++14 -DPRAGMA -Ofast -fopenmp -fmessage-length=0  -fPIC -Wall -
 
 CXXFLAGS += -DMIS_numChannels=16
 CXXFLAGS += -DMIS_hbmSize=0x10000000
+CXXFLAGS += -DMIS_vertexLimits=1024000
 
 # Define the target directories.
 #DEBUG = 1
