--- a/plugin/tigergraph/comdetect/examples/comdetect/Makefile
+++ b/plugin/tigergraph/comdetect/examples/comdetect/Makefile
@@ -103,7 +103,7 @@ help:
 	@echo "make install-plugin [deviceNames=deviceNames]"
 	@echo "    Install the plugin for the selected target device"
 	@echo ""
-	@echo "make run [deviceNames=deviceNames]"
+	@echo "make run alveoProject=alveo-project-name [deviceNames=deviceNames]"
 	@echo "    Run the example"
 	@echo ""
 	@echo "make partition"
@@ -113,12 +113,12 @@ help:
 	@echo "    Resets all the Alveo cards in the xsj-dxgradb cluster:"
 	@echo ""
 	@echo "Parameter descriptions:"
+	@echo "alveoProject      : Required. Partition files path / partition file name prefix"
 	@echo "deviceNames       : Target device name. Supported devices: "
-	@echo "                    xilinx_u50_gen3x16_xdma_201920_3"
+	@echo "                    xilinx_u50_gen3x16_xdma_201920_3 (default)"
 	@echo "                    xilinx_u55c_gen3x16_xdma_base_2"
 	@echo "dataSource        : A .mtx file containing input graph. default=./data/as-Skitter-wt-r100.mtx"
 	@echo "graphName         : graph name (default=social_<username>"
-	@echo "alveoProject      : partition files path / partition file name prefix"
 	@echo "numPartitionsNode : Number of Alveo partitions per node"
 	@echo ""
 	@echo "compileMode       : 0: skip database creation and gsql compilation"
