--- a/plugin/tigergraph/mis/package/CMakeLists.txt
+++ b/plugin/tigergraph/mis/package/CMakeLists.txt
@@ -20,7 +20,7 @@ set(CMAKE_SUPPRESS_DEVELOPER_WARNINGS 1 CACHE INTERNAL "No dev warnings")
 set (CMAKE_CXX_STANDARD 14)
 set (CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")
 set (PROJ_FILE_PATH "${CMAKE_SOURCE_DIR}/../staging/")
-set(CMAKE_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/${PROD_VERSION}")
+set (CMAKE_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/${PROD_VERSION}")
 
 install(DIRECTORY "${PROJ_FILE_PATH}/bin" DESTINATION ${CMAKE_INSTALL_PATH}/ USE_SOURCE_PERMISSIONS )
 install(DIRECTORY "${PROJ_FILE_PATH}/examples" DESTINATION ${CMAKE_INSTALL_PATH}/ USE_SOURCE_PERMISSIONS )
@@ -29,6 +29,8 @@ install(PROGRAMS "${PROJ_FILE_PATH}/install.sh" DESTINATION ${CMAKE_INSTALL_PATH
 install(FILES "${PROJ_FILE_PATH}/VERSION" DESTINATION ${CMAKE_INSTALL_PATH}/ )
 
 set(CPACK_PACKAGE_NAME "xilinx-mis-tigergraph-${PROD_VERSION}")
+set(STANDALONE_PACAKGE_NAME xilinx-mis-${PROD_VERSION})
+set(PRODUCT_NAME "MIS")
 set(CPACK_PACKAGE_VERSION "1.0.0")
 
 
@@ -73,11 +75,11 @@ endif()
 set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}_${CPACK_REL_VER}-${CPACK_ARCH}")
 
 message("-- ${CMAKE_BUILD_TYPE} ${PACKAGE_KIND} package")
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "xrt (>= 2.8.0),xrm (>= 1.2.0),python3")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "xrt (>= 2.8.0),xrm (>= 1.2.0),python3, ${STANDALONE_PACAKGE_NAME}")
 set(CPACK_RPM_PACKAGE_DEPENDS "xrt (>= 2.8.0), xrm (>= 1.2.0),python3 (>= 3.6.0)")
 
 set(CPACK_RPM_PRE_INSTALL_SCRIPT_FILE "${CMAKE_CURRENT_SOURCE_DIR}/rpmpreinst")
-set(CPACK_PACKAGE_CONTACT "Xilinx Fuzzymatch Development Team")
+set(CPACK_PACKAGE_CONTACT "Xilinx MIS Development Team")
 set(CPACK_PACKAGE_VENDOR "Xilinx")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Xilinx Fuzzymatch Engine for tigergraph plugin ")
 set(CPACK_RPM_EXCLUDE_FROM_AUTO_FILELIST_ADDITION "/opt" "/opt/xilinx" "/usr/lib64" "/opt/xilinx/apps" "/opt/xilinx/apps/graphanalytics")
