Updated gen-cluster-info.py to work with official XRT 2012.2 release

--- a/plugin/tigergraph/recomengine/examples/synthea/Makefile
+++ b/plugin/tigergraph/recomengine/examples/synthea/Makefile
@@ -30,4 +30,7 @@ run: .install-udf-done
 include ../Makefile-common.mk
 
 help: help-common
+	@echo ""
+	@echo "make run [deviceNames=deviceNames]"
+	@echo "    Run the example"
 
