Fixed minor issues in comdetect package

--- a/louvainmod/examples/cpp/Makefile
+++ b/louvainmod/examples/cpp/Makefile
@@ -161,7 +161,7 @@ help:
 	@echo "  make run-create-partitions [graph=/path/to/graph.mtx] [numPars=1]"
 	@echo "  Create partitions on a single node"
 	@echo ""
-	@echo "  make run [graph=/path/to/graph.mtx] [numPars=1] [numDevices=1]"
+	@echo "  make run [graph=/path/to/graph.mtx] [numPars=1] [numDevices=1] [deviceNames=xilinx_u50_gen3x16_xdma_201920_3]"
 	@echo "  Load partition and compute Louvain modularity on a single node"
 	@echo ""
 	@echo "  Run test in a 3 node cluster"
@@ -177,6 +177,9 @@ help:
 	@echo "-------- Options --------"
 	@echo "graph: graph input .mtx file"
 	@echo "alveoProject : Alveo project name without .par.proj extension"
+	@echo "deviceNames  : Target device name. Supported devices: "
+	@echo "               xilinx_u50_gen3x16_xdma_201920_3"
+	@echo "               xilinx_u55c_gen3x16_xdma_base_2"
     @echo "numNodes     : Number of nodes (default=1)"
 	@echo "numPars      : Number of partitions (default=1)"
 	@echo "numDevices   : Number of devices (default=1)"	
