--- a/mis/Makefile
+++ b/mis/Makefile
@@ -75,13 +75,9 @@ CXXFLAGS += -D_GLIBCXX_USE_CXX11_ABI=$(GLIB_VERSION)
 deviceNames=xilinx_u50_gen3x16_xdma_201920_3
 
 
-ifeq ($(deviceNames),xilinx_u50_gen3x16_xdma_201920_3)
-	CXXFLAGS += -DMIS_hbmSize=0x10000000
+ifneq (, $(shell echo $(deviceNames) | awk '/u50/'))
 	CXXFLAGS += -DUSE_HBM
-else ifeq ($(deviceNames),xilinx_u200_gen3x16_xdma_base_1)
-	CXXFLAGS += -DMIS_ddrSize=0x80000000
-else ifeq ($(deviceNames),xilinx_u55c_gen3x16_xdma_base_2)
-	CXXFLAGS += -DMIS_hbmSize=0x10000000
+else ifneq (, $(shell echo $(deviceNames) | awk '/u55c/'))
 	CXXFLAGS += -DUSE_HBM
 endif
 
@@ -192,6 +188,15 @@ endif
 # XCLBIN
 #
 INC_ALL_XCLBINS=1
+
+# VU9P XCLBIN 
+L2_TOP_DIR_VU9P = $(GRAPH_ANALYTICS_DIR)/L2/mis_kernel
+L2_XDEVICE_VU9P = xilinx_aws-vu9p-f1_shell-v04261818_201920_2
+L2_BUILD_DIR_VU9P = $(L2_TOP_DIR_VU9P)/build_dir.hw.$(L2_XDEVICE_VU9P)
+XCLBIN_NAME_VU9P = misKernel.awsxclbin
+XCLBIN_FILE_VU9P = $(L2_BUILD_DIR_VU9P)/$(XCLBIN_NAME_VU9P)
+XCLBIN_INSTALLED_NAME_VU9P = mis_xilinx_aws-vu9p-f1_shell-v04261818_201920_2.awsxclbin
+XCLBIN_INSTALLED_VU9P =/opt/xilinx/apps/graphanalytics/mis/$(PRODUCT_VER)/xclbin/$(XCLBIN_INSTALLED_NAME_VU9P)
 
 # U200 XCLBIN 
 L2_TOP_DIR_U200 = $(GRAPH_ANALYTICS_DIR)/L2/mis_kernel
@@ -493,14 +498,22 @@ $(STAGE_STAGED_EXAMPLE_FILES):
 	
 
 # XCLBIN file
+STAGE_XCLBIN_NAME_VU9P = $(XCLBIN_INSTALLED_NAME_VU9P)
+STAGE_XCLBIN_FILE_VU9P = $(STAGE_DIR)/xclbin/$(STAGE_XCLBIN_NAME_VU9P)
+
 STAGE_XCLBIN_NAME_U50 = $(XCLBIN_INSTALLED_NAME_U50)
 STAGE_XCLBIN_FILE_U50 = $(STAGE_DIR)/xclbin/$(STAGE_XCLBIN_NAME_U50)
+
 STAGE_XCLBIN_NAME_U200 = $(XCLBIN_INSTALLED_NAME_U200)
 STAGE_XCLBIN_FILE_U200 = $(STAGE_DIR)/xclbin/$(STAGE_XCLBIN_NAME_U200)
+
 STAGE_XCLBIN_NAME_U55 = $(XCLBIN_INSTALLED_NAME_U55)
 STAGE_XCLBIN_FILE_U55 = $(STAGE_DIR)/xclbin/$(STAGE_XCLBIN_NAME_U55)
 
 $(STAGE_XCLBIN_FILE_U200): $(XCLBIN_FILE_U200)
+	cp -f $^ $@
+
+$(STAGE_XCLBIN_FILE_VU9P): $(XCLBIN_FILE_VU9P)
 	cp -f $^ $@
 
 $(STAGE_XCLBIN_FILE_U50): $(XCLBIN_FILE_U50)
@@ -526,7 +539,7 @@ STAGE_ALL_FILES = \
 
 # Conditionally add XCLBIN files
 ifeq ($(INC_ALL_XCLBINS),1) 
-	STAGE_ALL_FILES += $(STAGE_XCLBIN_FILE_U200) $(STAGE_XCLBIN_FILE_U50) $(STAGE_XCLBIN_FILE_U55)
+	STAGE_ALL_FILES += $(STAGE_XCLBIN_FILE_VU9P) $(STAGE_XCLBIN_FILE_U200) $(STAGE_XCLBIN_FILE_U50) $(STAGE_XCLBIN_FILE_U55)
 else ifeq ($(deviceNames),xilinx_u200_gen3x16_xdma_base_1)
     STAGE_ALL_FILES += $(STAGE_XCLBIN_FILE_U200)
 else ifeq ($(deviceNames),xilinx_u50_gen3x16_xdma_201920_3)
