--- a/mis/package/CMakeLists.txt
+++ b/mis/package/CMakeLists.txt
@@ -25,8 +25,8 @@ set(CMAKE_INSTALL_PATH "${CMAKE_INSTALL_PREFIX}/mis/${PROD_VERSION}")
 install(DIRECTORY "${CS_FILE_PATH}/lib/" DESTINATION ${CMAKE_INSTALL_PATH}/lib USE_SOURCE_PERMISSIONS)
 install(DIRECTORY "${CS_FILE_PATH}/include/" DESTINATION ${CMAKE_INSTALL_PATH}/include USE_SOURCE_PERMISSIONS)
 
-install(FILES "${CS_FILE_PATH}/xclbin/mis_xilinx_u50_gen3x16_xdma_201920_3.xclbin" DESTINATION ${CMAKE_INSTALL_PATH}/xclbin)
-install(FILES "${CS_FILE_PATH}/xclbin/mis_xilinx_u55c_gen3x16_xdma_2_202110_1.xclbin" DESTINATION ${CMAKE_INSTALL_PATH}/xclbin)
+install(DIRECTORY "${CS_FILE_PATH}/xclbin/" DESTINATION ${CMAKE_INSTALL_PATH}/xclbin)
+#install(FILES "${CS_FILE_PATH}/xclbin/mis_xilinx_u55c_gen3x16_xdma_2_202110_1.xclbin" DESTINATION ${CMAKE_INSTALL_PATH}/xclbin)
 
 install(FILES "${CS_FILE_PATH}/src/mis_loader.cpp" DESTINATION ${CMAKE_INSTALL_PATH}/src)
 #install(FILES "${CS_FILE_PATH}/examples.zip" DESTINATION ${CMAKE_INSTALL_PATH}/)
